Finally actually fixed side scrolling on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,7 @@ body {
     color: var(--text-color);
     font-family: 'DM Sans';
     line-height: 2em;
+    overflow-x: hidden;
 }
 
 body > * {
@@ -32,6 +33,7 @@ body > * {
   height: 10%;
   background-color: var(--bg-color);
   top: 0;
+  left: 0;
   z-index: 1;
 }
 
@@ -56,6 +58,7 @@ h4 {
         height: 18%;
         background-color: var(--bg-color);
         top: 0;
+        left: 0;
         z-index: 1;
     }
     
@@ -224,6 +227,7 @@ i {
 #contact {
     text-align: center;
     margin: 0;
+    width: 100%;
 }
 
 
@@ -235,12 +239,14 @@ i {
     content: '';
     background-color: transparent;
     background-image: var(--bg-image);
+    background-repeat: no-repeat;
     background-size: cover;
     height: 40%;
     width: 100%;
     position: absolute;
     filter: blur(30px);
     z-index: -1;
+    overflow-x: hidden;
 }
 
 
